<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="9dp"
                android:text="@string/titulo_nombre"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextName"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginBottom="16dp"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/textViewFechaNacimiento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

            <TextView
                android:id="@+id/textViewFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginBottom="14dp"
                android:text="@string/titulo_fecha_nacimiento"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/datePicker"
                app:layout_constraintStart_toStartOf="@+id/datePicker"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <DatePicker
                android:id="@+id/datePickerBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintTop_toBottomOf="@+id/textViewFechaNacimiento" />

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/titulo_mail"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:hint="@string/input_mail"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textViewTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/titulo_telefono"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:hint="@string/input_telefono"
                android:inputType="phone"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/titulo_descripcion"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:hint="@string/input_descripcion"
                android:inputType="textMultiLine"
                android:lines="5"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/buttonSiguiente"
                android:layout_width="408dp"
                android:layout_height="wrap_content"
                android:text="Siguiente"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/Titulo"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>